Refactoring: 1. Add partition 2.Change some logic of database interaction

--- a/DbfProcessor.csproj
+++ b/DbfProcessor.csproj
@@ -24,7 +24,7 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="impersonations.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
